force-app/main/default/objects/PrecoTipoUnidade__c/PrecoTipoUnidade__c.object-meta.xml
<CustomObject>
    <label>Preço do Tipo de Unidade</label>
    <nameField>
        <displayFormat>PU-{0000}</displayFormat>
        <label>Nome do Preço do Tipo de Unidade</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Preços de Tipos de Unidades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>