force-app/main/default/objects/PrecoTipoUnidade__c/fields/PrecoAnterior__c.field-meta.xml
<CustomField>
    <fullName>PrecoAnterior__c</fullName>
    <label>Preço anterior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>