force-app/main/default/objects/PrecoTipoUnidade__c/fields/PrecoAtual__c.field-meta.xml
<CustomField>
    <fullName>PrecoAtual__c</fullName>
    <label>Preço atual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>