force-app/main/default/objects/PrecoTipoUnidade__c/fields/TabelaVendas__c.field-meta.xml
<CustomField>
    <fullName>TabelaVendas__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tabela de Vendas</label>
    <referenceTo>TabelaVendas__c</referenceTo>
    <relationshipLabel>Preços de Tipos de Unidades</relationshipLabel>
    <relationshipName>PrecosTiposUnidades</relationshipName>
    <type>Lookup</type>
</CustomField>