force-app/main/default/objects/PrecoTipoUnidade__c/fields/ValorAtualizacaoPercentual__c.field-meta.xml
<CustomField>
    <fullName>ValorAtualizacaoPercentual__c</fullName>
    <label>Valor da atualização percentual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>