force-app/main/default/objects/PrecoTipoUnidade__c/fields/ValorAtualizaNominal__c.field-meta.xml
<CustomField>
    <fullName>ValorAtualizaNominal__c</fullName>
    <label>Valor da atualização nominal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>