force-app/main/default/objects/PrecoTipoUnidade__c/validationRules/UmEmpreendimento.validationRule-meta.xml
<ValidationRule>
    <fullName>UmEmpreendimento</fullName>
    <active>true</active>
    <description>Verifica se o tipo de unidade e a tabela de vendas pertencem ao mesmo empreendimento</description>
    <errorConditionFormula>TabelaVendas__r.Empreendimento__c &lt;&gt; TipoUnidade__r.Empreendimento__c</errorConditionFormula>
    <errorMessage>O Tipo de Unidade e a Tabela de Vendas devem pertencer a um mesmo Empreendimento</errorMessage>
</ValidationRule>