force-app/main/default/objects/PrecoTipoUnidade__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Ativo__c</columns>
    <columns>TabelaVendas__c</columns>
    <columns>PrecoAtual__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>